# panelclv

./: .gitignore  CLAUDE.md  Data_integration.ipynb  Data_integration_LSTM.ipynb  Data_integration_LSTM_v2.ipynb  Data_integration_TRANSFORMER.ipynb  Data_integration_TRANSFORMER_v2.ipynb  LICENSE  PUBLISHING.md  README.md  bank_lstm_vs_pareto.py  instruction  pyproject.toml
Data_preparation/: __init__.py  build_bank_panel.py  dataset_building.py  dynamic_panel_dataset.py
Data_preparation/Dataset_builiding_notebook/: dataset_building.ipynb
Models/: __init__.py  evaluation_utils.py  experiment_utils.py  monte_carlo_forecasting.py  multinomial_lstm.py  multinomial_transformer.py  optuna_tuning.py  pareto_nbd.py  plot_utils.py  training_utils.py
Original_paper_model/: Data_integration_2.ipynb  banking_transactions_demo.ipynb
configs/: panel_config.py  transformations_spec.py
inputs_configs/: full_transactions_gender.json
notebooks/: Data_integration_LSTM.ipynb  Data_integration_LSTM_v2.ipynb  Data_integration_TRANSFORMER.ipynb  Data_integration_TRANSFORMER_v2.ipynb  Study.ipynb
panelclv/: __init__.py
panelclv/configs/: __init__.py  panel_config.py  transformations_spec.py
panelclv/evaluation/: __init__.py  plot_utils.py
panelclv/training/: training_utils.py
panelclv/tuning/: optuna_tuning.py
scripts/: main_plot.py  main_plot_covar.py  run_studies.py  validate_pareto_paper.py
src/panelclv/benchmarks/: __init__.py  pareto_paper.py
src/panelclv/configs/: __init__.py  panel_config.py
src/panelclv/data_preparation/: __init__.py  ar_features.py  dynamic_panel_dataset.py
src/panelclv/evaluation/: __init__.py  forecast_run.py  plot_utils.py  segment_analysis.py
src/panelclv/experiments/: __init__.py  experiment_utils.py
src/panelclv/models/: __init__.py  losses.py  monte_carlo_forecasting.py  multinomial_lstm.py  multinomial_transformer.py
src/panelclv/studies/: __init__.py  config.py  layout.py  runner.py
src/panelclv/training/: __init__.py  training_utils.py
src/panelclv/tuning/: __init__.py  optuna_tuning.py
tests/: test_ar_features.py  test_imports.py  test_losses.py  test_studies_layout.py
utils/: main_plot.py  main_plot_covar.py
